# actix-kit

./: .env.example  Cargo.toml  docker-compose.yml  package-lock.json  package.json
assets/styles/: app.css
entity/: Cargo.toml
entity/src/: prelude.rs  users.rs
migration/src/: lib.rs  m20250807_070915_create_users_table.rs
public/: app.css
src/: lib.rs  main.rs
src/helper/: mod.rs
src/middleware/: mod.rs
src/resources/: mod.rs
src/resources/accounts/: login.rs  logout.rs  mod.rs  user_store.rs
src/resources/emails/: mod.rs
templates/layouts/: app.html  guest.html
templates/views/: dashboard.html  welcome.html
templates/views/accounts/: login.html
templates/views/emails/: welcome.html
