[package]
name = "actixkit"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "entity",
    "migration",
]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

actix-files = "0.6.6"
actix-session = { version = "0.10.1", features = ["redis-session"] }
actix-web = "4.11.0"
dotenvy = "0.15.7"
sea-orm = { version = "1.1.14", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.219", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
tera = "1.20.0"
actix-passport = { version = "0.2.0", features = ["oauth", "postgres"] }
async-trait = "0.1.89"
uuid = { version = "1.18.0", features = ["v4"] }
